--- a/designer/login.html
+++ b/designer/login.html
@@ -29,6 +29,9 @@
                 </div>
                 <button type="submit" class="btn-submit">Entrar</button>
             </form>
+            <div class="auth-footer">
+                <p><a href="esqueci-senha.html">Esqueceu sua senha?</a></p>
+                </div>
         </div>
     </div>
     <!-- Usaremos um script dedicado para o designer -->
