--- a/designer/painel.html
+++ b/designer/painel.html
@@ -1,60 +1,60 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Painel do Designer</title>
-    <link rel="stylesheet" href="../style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="app-layout">
-        <header class="app-header">
-            <div class="container header-content">
-                <img src="https://setordearte.com.br/images/logo-redonda.svg" alt="Logo Setor de Arte" class="app-logo">
-                <div class="user-menu">
-                    <span id="designer-greeting"></span>
-                    <button id="logout-button">Sair</button>
-                </div>
+<!-- SUBSTITUA O CONTEÚDO DA TAG <main> EM designer/painel.html -->
+<main class="main-painel">
+    <div class="container">
+
+        <!-- Cards de Resumo -->
+        <div class="dashboard-grid">
+            <div class="dash-card">
+                <div class="card-header"><span class="card-title">Saldo Disponível</span></div>
+                <div class="card-body"><span id="designer-saldo-disponivel" class="card-value">Carregando...</span></div>
+                <div class="card-footer"><button id="btn-solicitar-saque" class="card-button">Solicitar Saque</button></div>
             </div>
-        </header>
-        <main class="main-painel">
-            <div class="container">
+            <div class="dash-card">
+                <div class="card-header"><span class="card-title">Aguardando Depósito</span></div>
+                <div class="card-body"><span id="designer-saldo-pendente" class="card-value">Carregando...</span></div>
+                <div class="card-footer"><span>Saques solicitados</span></div>
+            </div>
+            <div class="dash-card">
+                <div class="card-header"><span class="card-title">Pedidos Ativos</span></div>
+                <div class="card-body"><span id="designer-pedidos-ativos" class="card-value">...</span></div>
+                <div class="card-footer"><span>Trabalhos em andamento</span></div>
+            </div>
+        </div>
 
-                <section class="saldo-section">
-                    <div class="saldo-box">
-                        <span class="saldo-label">Saldo Disponível</span>
-                        <span id="designer-saldo-disponivel" class="saldo-valor">R$ 0,00</span>
-                    </div>
-                    <!-- NOVO CARD -->
-                    <div class="saldo-box">
-                        <span class="saldo-label">Aguardando Depósito</span>
-                        <span id="designer-saldo-pendente" class="saldo-valor">R$ 0,00</span>
-                    </div>
-                    <div class="acoes-box">
-                        <button id="btn-solicitar-saque" class="btn-acao btn-novo-pedido">Solicitar Saque</button>
-                    </div>
-                </section>
-
-                <section class="pedidos-section">
-                    <div class="pedidos-header-bar">
-                        <h2>Meus Pedidos Atribuídos</h2>
-                    </div>
+        <!-- Sistema de Abas -->
+        <div class="tabs-container">
+            <div class="tab-buttons">
+                <button class="tab-btn active" data-tab="atendimentos">Meus Atendimentos</button>
+                <button class="tab-btn" data-tab="saques">Histórico de Saques</button>
+            </div>
+            <div class="tab-content">
+                <!-- Conteúdo da Aba 1: Atendimentos -->
+                <div id="atendimentos" class="tab-pane active">
                     <div class="pedidos-list-header">
                         <div class="col-id">ID</div>
                         <div class="col-titulo">Título</div>
                         <div class="col-status">Status</div>
-                        <div class="col-valor">Sua Comissão</div>
+                        <div class="col-valor">Comissão</div>
+                        <div class="col-acoes">Ações</div>
                     </div>
-                    <div id="designer-pedidos-list" class="pedidos-list-body">
-                        <div class="loading-pedidos">
-                            <div class="spinner"></div>
-                            <span>Carregando seus pedidos...</span>
-                        </div>
+                    <div id="atendimentos-list" class="pedidos-list-body">
+                        <div class="loading-pedidos"><div class="spinner"></div></div>
                     </div>
-                </section>
+                </div>
+                <!-- Conteúdo da Aba 2: Saques -->
+                <div id="saques" class="tab-pane">
+                     <div class="pedidos-list-header">
+                        <div class="col-id">ID</div>
+                        <div class="col-titulo">Título</div>
+                        <div class="col-status">Status</div>
+                        <div class="col-valor">Valor</div>
+                    </div>
+                    <div id="saques-list" class="pedidos-list-body">
+                         <div class="loading-pedidos"><div class="spinner"></div></div>
+                    </div>
+                </div>
             </div>
-        </main>
+        </div>
+
     </div>
-    <script src="designer-script.js"></script>
-</body>
-</html>
+</main>
