--- a/designer/painel.html
+++ b/designer/painel.html
@@ -12,9 +12,11 @@
     <div class="app-layout">
         <header class="app-header">
             <div class="container header-content">
-                <img src="https://setordearte.com.br/images/logo-redonda.svg" alt="Logo Setor de Arte" class="app-logo">
+                 <img src="https://setordearte.com.br/images/logo-redonda.svg" alt="Logo Setor de Arte" class="app-logo">
                 <div class="user-menu">
-                    <span id="designer-greeting">Carregando...</span>
+                    <a href="perfil.html" id="designer-greeting-link" style="text-decoration: none;">
+                        <span id="designer-greeting"></span>
+                    </a>
                     <button id="logout-button">Sair</button>
                 </div>
             </div>
