--- a/designer/perfil.html
+++ b/designer/perfil.html
@@ -68,7 +68,7 @@
     </div>
 </main>
     </div>
-    <!-- Script dedicado para a página de perfil -->
+    <!-- Script dedicado para a página de perrfil -->
     <script src="perfil-script.js"></script>
 </body>
 </html>
