--- a/painel.html
+++ b/painel.html
@@ -81,7 +81,12 @@
             </div>
         </main>
     </div>
-
+    <footer class="app-footer">
+        <div class="container footer-content-wrapper">
+            <p>CNPJ: 50.775.322/0001-80 | &copy; 2024 Setor de Arte. Todos os direitos reservados.</p>
+            <p>Desenvolvido sob medida por <a href="https://vgdior.com" target="_blank" rel="noopener noreferrer">Dior</a>.</p>
+        </div>
+    </footer>
     <div class="modal-overlay" id="modal-novo-pedido">
     <div class="modal-content modal-lg">
         <div class="modal-header">
