--- a/painel.html
+++ b/painel.html
@@ -102,7 +102,7 @@
                     <a href="#" id="video-explicativo-toggle" class="video-toggle-link">Assistir Vídeo Explicativo</a>
                     <div id="video-explicativo-container" class="video-container hidden">
                         <!-- Use o link de embed do seu vídeo do YouTube -->
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/lae4DJIYXoA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
 
