--- a/financeiro.html
+++ b/financeiro.html
@@ -9,8 +9,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Adicionaremos um CSS customizado para esta página se necessário -->
     <style>
-        .radio-group label { margin-right: 15px; cursor: pointer; }
-        .btn-verificar { padding: 5px 10px; font-size: 0.8rem; }
+        /* Container principal para as ações */
+        .financial-actions-group {
+            display: flex;
+            flex-direction: column; /* Organiza os itens em coluna */
+            align-items: center;   /* Centraliza horizontalmente */
+            gap: 8px;              /* Espaço entre o botão e os radios */
+        }
+
+        /* Grupo dos botões de rádio */
+        .radio-group {
+            display: flex;
+            gap: 15px; /* Espaço entre "Pago" e "Devedor" */
+        }
+
+        .radio-group label {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+        
+        /* Estilo do botão Verificar/Ver Detalhes */
+        .btn-verificar {
+            padding: 5px 12px;
+            font-size: 0.8rem;
+            text-decoration: none;
+            border-radius: 5px;
+            border: 1px solid var(--borda);
+            background-color: #f8f9fa;
+            color: var(--texto-escuro);
+            transition: background-color 0.2s;
+        }
+
+        .btn-verificar:hover {
+            background-color: #e9ecef;
+        }
     </style>
 </head>
 <body>
