--- a/financeiro.html
+++ b/financeiro.html
@@ -61,7 +61,19 @@
                 <section class="pedidos-section">
                     <div class="pedidos-header-bar">
                         <h2>Painel Financeiro</h2>
-                        <!-- Filtros podem ser adicionados aqui no futuro -->
+                       <section class="pedidos-section">
+                    <div class="pedidos-header-bar">
+                        <h2>Painel Financeiro</h2>
+                        <div id="financeiro-filtros" class="filtros-pedidos">
+                            <select id="status-filter">
+                                <option value="todos">Todos os Status</option>
+                                <option value="C11:UC_YYHPKI">Verificar Pendência</option>
+                                <option value="C11:UC_4SNWR7">Pago</option>
+                                <option value="C11:UC_W0DCSV">Devedor</option>
+                            </select>
+                            <button id="btn-buscar" class="btn-acao">Buscar</button>
+                        </div>
+                    </div>
                     </div>
 
                     <!-- Cabeçalho da Lista -->
