--- a/financeiro.html
+++ b/financeiro.html
@@ -65,6 +65,7 @@
                     <div class="pedidos-header-bar">
                         <h2>Painel Financeiro</h2>
                         <div id="financeiro-filtros" class="filtros-pedidos">
+                            <input type="text" id="name-filter-input" placeholder="Buscar por nome do pedido...">
                             <select id="status-filter">
                                 <option value="todos">Todos os Status</option>
                                 <option value="C11:UC_YYHPKI">Verificar Pendência</option>
