--- a/impressao.html
+++ b/impressao.html
@@ -66,5 +66,22 @@
 
     <!-- Script dedicado para esta página -->
     <script src="impressao-script.js"></script>
+    <!-- Script dedicado para esta página -->
+    <script src="impressao-script.js"></script>
+
+    <!-- MODAL DE DETALHES RÁPIDOS DO PEDIDO -->
+    <div class="modal-overlay" id="modal-detalhes-rapidos">
+        <div class="modal-content modal-lg">
+            <div class="modal-header">
+                <h3 id="modal-titulo">Detalhes do Pedido</h3>
+                <button class="close-modal" title="Fechar">×</button>
+            </div>
+            <div class="modal-body" id="modal-body-content">
+                <!-- Conteúdo será inserido aqui via JS -->
+                <div class="loading-pedidos"><div class="spinner"></div></div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
