--- a/impressao.html
+++ b/impressao.html
@@ -64,9 +64,7 @@
         </main>
     </div>
 
-    <!-- Script dedicado para esta página -->
-    <script src="impressao-script.js"></script>
-    <!-- Script dedicado para esta página -->
+    
     <script src="impressao-script.js"></script>
 
     <!-- MODAL DE DETALHES RÁPIDOS DO PEDIDO -->
@@ -76,8 +74,8 @@
                 <h3 id="modal-titulo">Detalhes do Pedido</h3>
                 <button class="close-modal" title="Fechar">×</button>
             </div>
+            <!-- O corpo do modal será preenchido dinamicamente -->
             <div class="modal-body" id="modal-body-content">
-                <!-- Conteúdo será inserido aqui via JS -->
                 <div class="loading-pedidos"><div class="spinner"></div></div>
             </div>
         </div>
