--- a/painel.html
+++ b/painel.html
@@ -97,11 +97,9 @@
             <div class="form-grid-modified">
                 <div id="pedido-form-error" class="form-feedback error hidden full-width"></div>
                 
-                <!-- 1. Vídeo Explicativo -->
                 <div class="video-explicativo-wrapper full-width">
                     <a href="#" id="video-explicativo-toggle" class="video-toggle-link">Assistir Vídeo Explicativo</a>
                     <div id="video-explicativo-container" class="video-container hidden">
-                        <!-- Use o link de embed do seu vídeo do YouTube -->
                         <iframe width="100%" height="315" src="https://www.youtube.com/embed/lae4DJIYXoA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -116,7 +114,6 @@
                         <input type="text" id="cliente-final-nome" required>
                     </div>
                     <div class="form-group">
-                        <!-- 2. Campo com máscara será aplicado via JS -->
                         <label for="cliente-final-wpp">WhatsApp do Cliente Final</label>
                         <input type="tel" id="cliente-final-wpp" required placeholder="(00) 00000-0000">
                     </div>
@@ -126,11 +123,30 @@
                     </div>
                 </div>
 
-                <!-- 4 e 5. Novos campos de materiais dinâmicos -->
+                <div class="form-group-flex full-width" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;">
+                    <div class="form-group">
+                        <label for="pedido-impressora">Impressora</label>
+                        <select id="pedido-impressora" required>
+                            <option value="">Carregando...</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="pedido-material">Material</label>
+                        <select id="pedido-material" required>
+                            <option value="">Carregando...</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="pedido-tipo-entrega">Tipo de Entrega</label>
+                        <select id="pedido-tipo-entrega" required>
+                            <option value="">Carregando...</option>
+                        </select>
+                    </div>
+                </div>
+
                 <div class="full-width">
                     <h4 class="materiais-header">Materiais do Pedido</h4>
                     <div id="materiais-container">
-                        <!-- O primeiro item já vem na página -->
                         <div class="material-item">
                             <label class="item-label">Item 1</label>
                             <div class="form-group">
@@ -143,7 +159,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Botão para adicionar mais itens -->
                     <button type="button" id="btn-add-material" class="btn-add-material">+ Adicionar Material</button>
                 </div>
                 
@@ -184,5 +199,3 @@
 
 </body>
 </html>
-
-
